parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    GE
    LE
    NEQ

Grammar

Rule 0     S' -> commands
Rule 1     commands -> command commands
Rule 2     commands -> command
Rule 3     command -> SELECT column_list FROM ID where_opt limit_opt SEMI
Rule 4     column_list -> STAR
Rule 5     column_list -> ID COMMA column_list
Rule 6     column_list -> ID
Rule 7     where_opt -> WHERE condition
Rule 8     where_opt -> <empty>
Rule 9     limit_opt -> LIMIT NUMBER
Rule 10    limit_opt -> <empty>
Rule 11    condition -> ID EQ value
Rule 12    condition -> ID GT value
Rule 13    condition -> ID LT value
Rule 14    value -> NUMBER
Rule 15    value -> STRING
Rule 16    command -> IMPORT TABLE ID FROM STRING SEMI
Rule 17    command -> EXPORT TABLE ID AS STRING SEMI
Rule 18    command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
Rule 19    command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI
Rule 20    command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI
Rule 21    command -> DISCARD TABLE ID SEMI
Rule 22    command -> RENAME TABLE ID ID SEMI
Rule 23    command -> PRINT TABLE ID SEMI
Rule 24    command -> PROCEDURE ID DO commands END
Rule 25    command -> CALL ID SEMI

Terminals, with rules where they appear

AS                   : 17
CALL                 : 25
COMMA                : 5
CREATE               : 18 19 20
DISCARD              : 21
DO                   : 24
END                  : 24
EQ                   : 11
EXPORT               : 17
FROM                 : 3 16 18 19 20
GE                   : 
GT                   : 12
ID                   : 3 5 6 11 12 13 16 17 18 18 18 18 19 19 19 19 20 20 21 22 22 23 24 25
IMPORT               : 16
JOIN                 : 18 19
LE                   : 
LIMIT                : 9
LPAREN               : 18
LT                   : 13
NEQ                  : 
NUMBER               : 9 14
PRINT                : 23
PROCEDURE            : 24
RENAME               : 22
RPAREN               : 18
SELECT               : 3 20
SEMI                 : 3 16 17 18 19 20 21 22 23 25
STAR                 : 4
STRING               : 15 16 17
TABLE                : 16 17 18 19 20 21 22 23
USING                : 18 19
WHERE                : 7
error                : 

Nonterminals, with rules where they appear

column_list          : 3 5 20
command              : 1 2
commands             : 1 24 0
condition            : 7
limit_opt            : 3 20
value                : 11 12 13
where_opt            : 3 20

Parsing method: LALR

state 0

    (0) S' -> . commands
    (1) commands -> . command commands
    (2) commands -> . command
    (3) command -> . SELECT column_list FROM ID where_opt limit_opt SEMI
    (16) command -> . IMPORT TABLE ID FROM STRING SEMI
    (17) command -> . EXPORT TABLE ID AS STRING SEMI
    (18) command -> . CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> . CREATE TABLE ID FROM ID JOIN ID USING ID SEMI
    (20) command -> . CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI
    (21) command -> . DISCARD TABLE ID SEMI
    (22) command -> . RENAME TABLE ID ID SEMI
    (23) command -> . PRINT TABLE ID SEMI
    (24) command -> . PROCEDURE ID DO commands END
    (25) command -> . CALL ID SEMI

    SELECT          shift and go to state 3
    IMPORT          shift and go to state 4
    EXPORT          shift and go to state 5
    CREATE          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    PROCEDURE       shift and go to state 10
    CALL            shift and go to state 11

    commands                       shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> commands .



state 2

    (1) commands -> command . commands
    (2) commands -> command .
    (1) commands -> . command commands
    (2) commands -> . command
    (3) command -> . SELECT column_list FROM ID where_opt limit_opt SEMI
    (16) command -> . IMPORT TABLE ID FROM STRING SEMI
    (17) command -> . EXPORT TABLE ID AS STRING SEMI
    (18) command -> . CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> . CREATE TABLE ID FROM ID JOIN ID USING ID SEMI
    (20) command -> . CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI
    (21) command -> . DISCARD TABLE ID SEMI
    (22) command -> . RENAME TABLE ID ID SEMI
    (23) command -> . PRINT TABLE ID SEMI
    (24) command -> . PROCEDURE ID DO commands END
    (25) command -> . CALL ID SEMI

    $end            reduce using rule 2 (commands -> command .)
    END             reduce using rule 2 (commands -> command .)
    SELECT          shift and go to state 3
    IMPORT          shift and go to state 4
    EXPORT          shift and go to state 5
    CREATE          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    PROCEDURE       shift and go to state 10
    CALL            shift and go to state 11

    command                        shift and go to state 2
    commands                       shift and go to state 12

state 3

    (3) command -> SELECT . column_list FROM ID where_opt limit_opt SEMI
    (4) column_list -> . STAR
    (5) column_list -> . ID COMMA column_list
    (6) column_list -> . ID

    STAR            shift and go to state 15
    ID              shift and go to state 14

    column_list                    shift and go to state 13

state 4

    (16) command -> IMPORT . TABLE ID FROM STRING SEMI

    TABLE           shift and go to state 16


state 5

    (17) command -> EXPORT . TABLE ID AS STRING SEMI

    TABLE           shift and go to state 17


state 6

    (18) command -> CREATE . TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE . TABLE ID FROM ID JOIN ID USING ID SEMI
    (20) command -> CREATE . TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI

    TABLE           shift and go to state 18


state 7

    (21) command -> DISCARD . TABLE ID SEMI

    TABLE           shift and go to state 19


state 8

    (22) command -> RENAME . TABLE ID ID SEMI

    TABLE           shift and go to state 20


state 9

    (23) command -> PRINT . TABLE ID SEMI

    TABLE           shift and go to state 21


state 10

    (24) command -> PROCEDURE . ID DO commands END

    ID              shift and go to state 22


state 11

    (25) command -> CALL . ID SEMI

    ID              shift and go to state 23


state 12

    (1) commands -> command commands .

    $end            reduce using rule 1 (commands -> command commands .)
    END             reduce using rule 1 (commands -> command commands .)


state 13

    (3) command -> SELECT column_list . FROM ID where_opt limit_opt SEMI

    FROM            shift and go to state 24


state 14

    (5) column_list -> ID . COMMA column_list
    (6) column_list -> ID .

    COMMA           shift and go to state 25
    FROM            reduce using rule 6 (column_list -> ID .)


state 15

    (4) column_list -> STAR .

    FROM            reduce using rule 4 (column_list -> STAR .)


state 16

    (16) command -> IMPORT TABLE . ID FROM STRING SEMI

    ID              shift and go to state 26


state 17

    (17) command -> EXPORT TABLE . ID AS STRING SEMI

    ID              shift and go to state 27


state 18

    (18) command -> CREATE TABLE . ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE . ID FROM ID JOIN ID USING ID SEMI
    (20) command -> CREATE TABLE . ID SELECT column_list FROM ID where_opt limit_opt SEMI

    ID              shift and go to state 28


state 19

    (21) command -> DISCARD TABLE . ID SEMI

    ID              shift and go to state 29


state 20

    (22) command -> RENAME TABLE . ID ID SEMI

    ID              shift and go to state 30


state 21

    (23) command -> PRINT TABLE . ID SEMI

    ID              shift and go to state 31


state 22

    (24) command -> PROCEDURE ID . DO commands END

    DO              shift and go to state 32


state 23

    (25) command -> CALL ID . SEMI

    SEMI            shift and go to state 33


state 24

    (3) command -> SELECT column_list FROM . ID where_opt limit_opt SEMI

    ID              shift and go to state 34


state 25

    (5) column_list -> ID COMMA . column_list
    (4) column_list -> . STAR
    (5) column_list -> . ID COMMA column_list
    (6) column_list -> . ID

    STAR            shift and go to state 15
    ID              shift and go to state 14

    column_list                    shift and go to state 35

state 26

    (16) command -> IMPORT TABLE ID . FROM STRING SEMI

    FROM            shift and go to state 36


state 27

    (17) command -> EXPORT TABLE ID . AS STRING SEMI

    AS              shift and go to state 37


state 28

    (18) command -> CREATE TABLE ID . FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE ID . FROM ID JOIN ID USING ID SEMI
    (20) command -> CREATE TABLE ID . SELECT column_list FROM ID where_opt limit_opt SEMI

    FROM            shift and go to state 38
    SELECT          shift and go to state 39


state 29

    (21) command -> DISCARD TABLE ID . SEMI

    SEMI            shift and go to state 40


state 30

    (22) command -> RENAME TABLE ID . ID SEMI

    ID              shift and go to state 41


state 31

    (23) command -> PRINT TABLE ID . SEMI

    SEMI            shift and go to state 42


state 32

    (24) command -> PROCEDURE ID DO . commands END
    (1) commands -> . command commands
    (2) commands -> . command
    (3) command -> . SELECT column_list FROM ID where_opt limit_opt SEMI
    (16) command -> . IMPORT TABLE ID FROM STRING SEMI
    (17) command -> . EXPORT TABLE ID AS STRING SEMI
    (18) command -> . CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> . CREATE TABLE ID FROM ID JOIN ID USING ID SEMI
    (20) command -> . CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI
    (21) command -> . DISCARD TABLE ID SEMI
    (22) command -> . RENAME TABLE ID ID SEMI
    (23) command -> . PRINT TABLE ID SEMI
    (24) command -> . PROCEDURE ID DO commands END
    (25) command -> . CALL ID SEMI

    SELECT          shift and go to state 3
    IMPORT          shift and go to state 4
    EXPORT          shift and go to state 5
    CREATE          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    PROCEDURE       shift and go to state 10
    CALL            shift and go to state 11

    commands                       shift and go to state 43
    command                        shift and go to state 2

state 33

    (25) command -> CALL ID SEMI .

    SELECT          reduce using rule 25 (command -> CALL ID SEMI .)
    IMPORT          reduce using rule 25 (command -> CALL ID SEMI .)
    EXPORT          reduce using rule 25 (command -> CALL ID SEMI .)
    CREATE          reduce using rule 25 (command -> CALL ID SEMI .)
    DISCARD         reduce using rule 25 (command -> CALL ID SEMI .)
    RENAME          reduce using rule 25 (command -> CALL ID SEMI .)
    PRINT           reduce using rule 25 (command -> CALL ID SEMI .)
    PROCEDURE       reduce using rule 25 (command -> CALL ID SEMI .)
    CALL            reduce using rule 25 (command -> CALL ID SEMI .)
    $end            reduce using rule 25 (command -> CALL ID SEMI .)
    END             reduce using rule 25 (command -> CALL ID SEMI .)


state 34

    (3) command -> SELECT column_list FROM ID . where_opt limit_opt SEMI
    (7) where_opt -> . WHERE condition
    (8) where_opt -> .

    WHERE           shift and go to state 45
    LIMIT           reduce using rule 8 (where_opt -> .)
    SEMI            reduce using rule 8 (where_opt -> .)

    where_opt                      shift and go to state 44

state 35

    (5) column_list -> ID COMMA column_list .

    FROM            reduce using rule 5 (column_list -> ID COMMA column_list .)


state 36

    (16) command -> IMPORT TABLE ID FROM . STRING SEMI

    STRING          shift and go to state 46


state 37

    (17) command -> EXPORT TABLE ID AS . STRING SEMI

    STRING          shift and go to state 47


state 38

    (18) command -> CREATE TABLE ID FROM . ID JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE ID FROM . ID JOIN ID USING ID SEMI

    ID              shift and go to state 48


state 39

    (20) command -> CREATE TABLE ID SELECT . column_list FROM ID where_opt limit_opt SEMI
    (4) column_list -> . STAR
    (5) column_list -> . ID COMMA column_list
    (6) column_list -> . ID

    STAR            shift and go to state 15
    ID              shift and go to state 14

    column_list                    shift and go to state 49

state 40

    (21) command -> DISCARD TABLE ID SEMI .

    SELECT          reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    IMPORT          reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    EXPORT          reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    CREATE          reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    DISCARD         reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    RENAME          reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    PRINT           reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    PROCEDURE       reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    CALL            reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    $end            reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)
    END             reduce using rule 21 (command -> DISCARD TABLE ID SEMI .)


state 41

    (22) command -> RENAME TABLE ID ID . SEMI

    SEMI            shift and go to state 50


state 42

    (23) command -> PRINT TABLE ID SEMI .

    SELECT          reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    IMPORT          reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    EXPORT          reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    CREATE          reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    DISCARD         reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    RENAME          reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    PRINT           reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    PROCEDURE       reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    CALL            reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    $end            reduce using rule 23 (command -> PRINT TABLE ID SEMI .)
    END             reduce using rule 23 (command -> PRINT TABLE ID SEMI .)


state 43

    (24) command -> PROCEDURE ID DO commands . END

    END             shift and go to state 51


state 44

    (3) command -> SELECT column_list FROM ID where_opt . limit_opt SEMI
    (9) limit_opt -> . LIMIT NUMBER
    (10) limit_opt -> .

    LIMIT           shift and go to state 53
    SEMI            reduce using rule 10 (limit_opt -> .)

    limit_opt                      shift and go to state 52

state 45

    (7) where_opt -> WHERE . condition
    (11) condition -> . ID EQ value
    (12) condition -> . ID GT value
    (13) condition -> . ID LT value

    ID              shift and go to state 55

    condition                      shift and go to state 54

state 46

    (16) command -> IMPORT TABLE ID FROM STRING . SEMI

    SEMI            shift and go to state 56


state 47

    (17) command -> EXPORT TABLE ID AS STRING . SEMI

    SEMI            shift and go to state 57


state 48

    (18) command -> CREATE TABLE ID FROM ID . JOIN ID USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE ID FROM ID . JOIN ID USING ID SEMI

    JOIN            shift and go to state 58


state 49

    (20) command -> CREATE TABLE ID SELECT column_list . FROM ID where_opt limit_opt SEMI

    FROM            shift and go to state 59


state 50

    (22) command -> RENAME TABLE ID ID SEMI .

    SELECT          reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    IMPORT          reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    EXPORT          reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    CREATE          reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    DISCARD         reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    RENAME          reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    PRINT           reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    PROCEDURE       reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    CALL            reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    $end            reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)
    END             reduce using rule 22 (command -> RENAME TABLE ID ID SEMI .)


state 51

    (24) command -> PROCEDURE ID DO commands END .

    SELECT          reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    IMPORT          reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    EXPORT          reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    CREATE          reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    DISCARD         reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    RENAME          reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    PRINT           reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    PROCEDURE       reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    CALL            reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    $end            reduce using rule 24 (command -> PROCEDURE ID DO commands END .)
    END             reduce using rule 24 (command -> PROCEDURE ID DO commands END .)


state 52

    (3) command -> SELECT column_list FROM ID where_opt limit_opt . SEMI

    SEMI            shift and go to state 60


state 53

    (9) limit_opt -> LIMIT . NUMBER

    NUMBER          shift and go to state 61


state 54

    (7) where_opt -> WHERE condition .

    LIMIT           reduce using rule 7 (where_opt -> WHERE condition .)
    SEMI            reduce using rule 7 (where_opt -> WHERE condition .)


state 55

    (11) condition -> ID . EQ value
    (12) condition -> ID . GT value
    (13) condition -> ID . LT value

    EQ              shift and go to state 62
    GT              shift and go to state 63
    LT              shift and go to state 64


state 56

    (16) command -> IMPORT TABLE ID FROM STRING SEMI .

    SELECT          reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    IMPORT          reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    EXPORT          reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    CREATE          reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    DISCARD         reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    RENAME          reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    PRINT           reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    PROCEDURE       reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    CALL            reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    $end            reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)
    END             reduce using rule 16 (command -> IMPORT TABLE ID FROM STRING SEMI .)


state 57

    (17) command -> EXPORT TABLE ID AS STRING SEMI .

    SELECT          reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    IMPORT          reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    EXPORT          reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    CREATE          reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    DISCARD         reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    RENAME          reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    PRINT           reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    PROCEDURE       reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    CALL            reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    $end            reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)
    END             reduce using rule 17 (command -> EXPORT TABLE ID AS STRING SEMI .)


state 58

    (18) command -> CREATE TABLE ID FROM ID JOIN . ID USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE ID FROM ID JOIN . ID USING ID SEMI

    ID              shift and go to state 65


state 59

    (20) command -> CREATE TABLE ID SELECT column_list FROM . ID where_opt limit_opt SEMI

    ID              shift and go to state 66


state 60

    (3) command -> SELECT column_list FROM ID where_opt limit_opt SEMI .

    SELECT          reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    IMPORT          reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    EXPORT          reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    CREATE          reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    DISCARD         reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    RENAME          reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    PRINT           reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    PROCEDURE       reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    CALL            reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    $end            reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)
    END             reduce using rule 3 (command -> SELECT column_list FROM ID where_opt limit_opt SEMI .)


state 61

    (9) limit_opt -> LIMIT NUMBER .

    SEMI            reduce using rule 9 (limit_opt -> LIMIT NUMBER .)


state 62

    (11) condition -> ID EQ . value
    (14) value -> . NUMBER
    (15) value -> . STRING

    NUMBER          shift and go to state 68
    STRING          shift and go to state 69

    value                          shift and go to state 67

state 63

    (12) condition -> ID GT . value
    (14) value -> . NUMBER
    (15) value -> . STRING

    NUMBER          shift and go to state 68
    STRING          shift and go to state 69

    value                          shift and go to state 70

state 64

    (13) condition -> ID LT . value
    (14) value -> . NUMBER
    (15) value -> . STRING

    NUMBER          shift and go to state 68
    STRING          shift and go to state 69

    value                          shift and go to state 71

state 65

    (18) command -> CREATE TABLE ID FROM ID JOIN ID . USING LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE ID FROM ID JOIN ID . USING ID SEMI

    USING           shift and go to state 72


state 66

    (20) command -> CREATE TABLE ID SELECT column_list FROM ID . where_opt limit_opt SEMI
    (7) where_opt -> . WHERE condition
    (8) where_opt -> .

    WHERE           shift and go to state 45
    LIMIT           reduce using rule 8 (where_opt -> .)
    SEMI            reduce using rule 8 (where_opt -> .)

    where_opt                      shift and go to state 73

state 67

    (11) condition -> ID EQ value .

    LIMIT           reduce using rule 11 (condition -> ID EQ value .)
    SEMI            reduce using rule 11 (condition -> ID EQ value .)


state 68

    (14) value -> NUMBER .

    LIMIT           reduce using rule 14 (value -> NUMBER .)
    SEMI            reduce using rule 14 (value -> NUMBER .)


state 69

    (15) value -> STRING .

    LIMIT           reduce using rule 15 (value -> STRING .)
    SEMI            reduce using rule 15 (value -> STRING .)


state 70

    (12) condition -> ID GT value .

    LIMIT           reduce using rule 12 (condition -> ID GT value .)
    SEMI            reduce using rule 12 (condition -> ID GT value .)


state 71

    (13) condition -> ID LT value .

    LIMIT           reduce using rule 13 (condition -> ID LT value .)
    SEMI            reduce using rule 13 (condition -> ID LT value .)


state 72

    (18) command -> CREATE TABLE ID FROM ID JOIN ID USING . LPAREN ID RPAREN SEMI
    (19) command -> CREATE TABLE ID FROM ID JOIN ID USING . ID SEMI

    LPAREN          shift and go to state 75
    ID              shift and go to state 74


state 73

    (20) command -> CREATE TABLE ID SELECT column_list FROM ID where_opt . limit_opt SEMI
    (9) limit_opt -> . LIMIT NUMBER
    (10) limit_opt -> .

    LIMIT           shift and go to state 53
    SEMI            reduce using rule 10 (limit_opt -> .)

    limit_opt                      shift and go to state 76

state 74

    (19) command -> CREATE TABLE ID FROM ID JOIN ID USING ID . SEMI

    SEMI            shift and go to state 77


state 75

    (18) command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN . ID RPAREN SEMI

    ID              shift and go to state 78


state 76

    (20) command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt . SEMI

    SEMI            shift and go to state 79


state 77

    (19) command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .

    SELECT          reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    IMPORT          reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    EXPORT          reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    CREATE          reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    DISCARD         reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    RENAME          reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    PRINT           reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    PROCEDURE       reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    CALL            reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    $end            reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)
    END             reduce using rule 19 (command -> CREATE TABLE ID FROM ID JOIN ID USING ID SEMI .)


state 78

    (18) command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID . RPAREN SEMI

    RPAREN          shift and go to state 80


state 79

    (20) command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .

    SELECT          reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    IMPORT          reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    EXPORT          reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    CREATE          reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    DISCARD         reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    RENAME          reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    PRINT           reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    PROCEDURE       reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    CALL            reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    $end            reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)
    END             reduce using rule 20 (command -> CREATE TABLE ID SELECT column_list FROM ID where_opt limit_opt SEMI .)


state 80

    (18) command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN . SEMI

    SEMI            shift and go to state 81


state 81

    (18) command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .

    SELECT          reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    IMPORT          reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    EXPORT          reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    CREATE          reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    DISCARD         reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    RENAME          reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    PRINT           reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    PROCEDURE       reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    CALL            reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    $end            reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)
    END             reduce using rule 18 (command -> CREATE TABLE ID FROM ID JOIN ID USING LPAREN ID RPAREN SEMI .)

